# notification_bot_telegram_client

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
configs/: config.yaml
lib/: __init__.py  client.py  keyboards.py  print_functions.py
lib/backend/: __init__.py  abs_backend_requester.py  backend_requester.py  models.py
lib/client/: client.py  client_builder.py  keyboards.py  print_functions.py
lib/common/: constants.py
lib/utils/: utils.py
